Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34777

OpenSL volume scale is wrong

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.2.1
    • 5.2.0 Beta1
    • Multimedia
    • None
    • Android
    • 14f31c29cf0bc78f66064306a91d3cb69677f542

    Description

      The volume range used in the opensl plugin is not correct, the documentation is a bit sparse on the subject but it should apparently be in voltage gain.
      With the current calculation, only values between 0.6-1.0 is actually audible.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            stromme Christian
            stromme Christian
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes